INTYG-7740: ändrar frontendskelett till att vara baserat på ts-diabetes3

--- a/ts/tstrk1009/src/main/resources/META-INF/resources/webjars/tstrk1009/minaintyg/views/error.html
+++ b/ts/tstrk1009/src/main/resources/META-INF/resources/webjars/tstrk1009/minaintyg/views/error.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div id="backnav" class="row-fluid">
-    <a class="backlink" href="{{backLink}}"><span dynamic-label key="ts-bas.button.goback"></span></a>
+    <a class="backlink" href="{{backLink}}"><span dynamic-label key="tstrk1009.button.goback"></span></a>
   </div>
   <h1>
     <span dynamic-label key="error.pagetitle"></span>
@@ -9,7 +9,7 @@
   <div class="row-fluid">
 
     <div id="errorMessage" class="alert alert-error">
-      <span dynamic-label key="ts-bas.error.{{errorCode}}"></span>
+      <span dynamic-label key="tstrk1009.error.{{errorCode}}"></span>
     </div>
 
   </div>
