INTYG-6965: Dölj och visa hjälppanelen till höger på utkast/intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -1,4 +1,6 @@
-<div class="tab-content-title-row">Diagnosspecifik information</div>
+<div class="tab-content-title-row">
+  <span class="tab-content-title-row-title">Diagnosspecifik information</span>
+</div>
 
 <div class="fmb-diagnos-row" ng-class="{'has-diagnose' : !vm.noDataMessage.warning && !vm.noDataMessage.incorrectKodverk}">
   <span ng-repeat="d in getDiagnoses()" class="fmb-diagnos-description">
