--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
@@ -1,4 +1,6 @@
-<div class="tab-content-title-row">Om intyget</div>
+<div class="tab-content-title-row">
+  <span class="tab-content-title-row-title">Om intyget</span>
+</div>
 
 
 
