--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.html
@@ -1,16 +1,43 @@
-<ul class="support-tabs">
-  <li ng-repeat="tab in config.tabs" role="presentation" ng-class="{'active': tab.active}">
-    <a href ng-click="onSelect(tab, $event)"
-       ng-attr-id="{{::'tab-link-' + tab.id}}"
-       uib-popover="{{::getText(tab.tooltip)}}"
+<div class="inside-wrapper">
+  <ul class="support-tabs" id="support-tabs">
+    <li ng-repeat="tab in config.tabs" role="presentation" ng-class="{'active': tab.active}">
+      <a href ng-click="onSelect(tab, $event)"
+         ng-attr-id="{{::'tab-link-' + tab.id}}"
+         uib-popover="{{::getText(tab.tooltip)}}"
+         popover-placement="auto top">
+        <i data-ng-if="tab.icon" class="material-icons">{{::tab.icon}}</i>
+        <span dynamic-label key="{{::tab.title}}"></span>
+      </a>
+    </li>
+  </ul>
 
-       popover-placement="auto top">
-      <i data-ng-if="tab.icon" class="material-icons">{{::tab.icon}}</i>
-      <span dynamic-label key="{{::tab.title}}"></span>
-    </a>
-  </li>
-</ul>
+  <ul class="minimized-support-tabs" id="minimized-support-tabs">
+    <li ng-repeat="tab in config.tabs" role="presentation" ng-class="{'active': tab.active}">
+      <a href ng-click="onSelectMinimized(tab, $event)"
+         ng-attr-id="{{::'tab-minimized-link-' + tab.id}}"
+         uib-popover="{{::getText(tab.minimized.tooltip)}}"
+         popover-placement="left auto">
+        <i data-ng-if="tab.minimized.icon && !tab.minimized.iconIsCustom" class="material-icons">{{::tab.minimized.icon}}</i>
+        <i data-ng-if="tab.minimized.iconIsCustom" class="{{::tab.minimized.icon}} icon-wc-24"></i>
+        <span class="notification" ng-if="tab.minimized.notificationCount > 0">{{tab.minimized.notificationCount}}</span>
+        <span dynamic-label key="{{::tab.minimized.title}}"></span>
+      </a>
+    </li>
+  </ul>
 
-<div class="tab-content-container" ng-repeat="tab in config.tabs" ng-show="tab.active">
-  <wc-support-panel-component-renderer component-name="{{tab.id}}" config="tab.config"></wc-support-panel-component-renderer>
+  <div class="tab-content-wrapper">
+    <div class="sidebar-minimize">
+      <a href id="sidebar-minimize"
+         ng-click="setMinimized(true)"
+         uib-popover="{{::getText('common.supportpanel.minimize.tooltip')}}"
+         popover-placement="left auto"
+        >
+        <i class="material-icons">keyboard_arrow_right</i>
+        <i class="material-icons">keyboard_arrow_right</i><!-- @TODO: use a single icon instead of these two combined -->
+      </a>
+    </div>
+    <div class="tab-content-container" ng-repeat="tab in config.tabs" ng-show="tab.active">
+      <wc-support-panel-component-renderer component-name="{{tab.id}}" config="tab.config"></wc-support-panel-component-renderer>
+    </div>
+  </div>
 </div>
