--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
@@ -11,6 +11,13 @@ body {
   flex-direction: column;
 }
 
+// used for positioning of the minimized sidebar
+.webcert-workarea-wrapper{
+  position: relative;
+  width: 100%;
+  display: flex;
+}
+
 .webcert-workarea {
   display: flex;
   flex: 1;
@@ -68,10 +75,14 @@ body {
     flex: 1;
     min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
 
+    .main-area{
+      flex-grow: 1;
+      max-width: 60%;
+    }
+
     //Split horizontally in 3:2 ratio
     .webcert-workarea-intyg {
-      position: relative; //important: needs to be relative for anchorScroll to work
-      flex: 3;
+      width: $wc-max-content-width * 0.6;
       overflow-y: auto;
       padding: 20px 15px 0 15px;
       background-color: $wc-color-27;
@@ -82,19 +93,18 @@ body {
         padding-bottom:35px;
       }
     }
+
     .webcert-workarea-supportpanel {
-      flex: 2;
+      width: 40%;
       min-width: 1%;
     }
 
-    > .bottom-fadeout-gradient {
+    .bottom-fadeout-gradient-main{
       @extend %bottom-gradient;
-
-      max-width: $wc-max-content-width * 0.6;
+      width: $wc-max-content-width * 0.6;
       left: auto;
-      z-index: 10;
-      padding: 0 15px;
-      width: 60%;
+      padding: 0;
+      margin-left: -15px;
     }
   }
 }
