INTYG-7891: Flyttat valideringsmeddelanden till respektive rad

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
@@ -56,11 +56,10 @@
           </button>
         </div>
 
+        <ue-validation-list field-type="ue-sjukfranvaro"
+                            validations="validationMessages[$index]"></ue-validation-list>
       </div>
     </div>
-
-    <ue-validation-list field-type="ue-sjukfranvaro"
-                        validations="validationMessages"></ue-validation-list>
 
     <div class="row">
       <div class="col-xs-12">
