INTYG-6965: Fix för minimerad sidpanel på små skärmar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
@@ -204,4 +204,11 @@ wc-support-panel-manager {
 
 }
 
+@media (max-width: 1440px) {
+  wc-support-panel-manager.minimized {
+    position: static;
+    margin-left: 15px;
+    flex-shrink: 0;
+  }
+}
 
