--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
@@ -105,6 +105,8 @@ body {
       left: auto;
       padding: 0;
       margin-left: -15px;
+      max-width: calc(100% - 125px);
+      margin-right: 15px;
     }
   }
 }
