--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
@@ -16,6 +16,7 @@ body {
   position: relative;
   width: 100%;
   display: flex;
+  min-height: 1%;
 }
 
 .webcert-workarea {
@@ -72,8 +73,9 @@ body {
   // handle their own overflow, eg intyg / supportpanel.
   .webcert-workarea-hflex-container {
     display: flex;
-    flex: 1;
+    flex: 1 1 auto;
     min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
+    min-width: 1%;
 
     .main-area{
       flex-grow: 1;
@@ -82,6 +84,7 @@ body {
 
     //Split horizontally in 3:2 ratio
     .webcert-workarea-intyg {
+      min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
       width: $wc-max-content-width * 0.6;
       overflow-y: auto;
       padding: 20px 15px 0 15px;
