--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
@@ -33,8 +33,8 @@ wc-bottom-fadeout {
 
     &:after {
       content: '';
-      display: block;
-      padding-bottom: $wc-text-fadeout-height;
+      display: table;
+      clear: both;
     }
   }
 }
