DEVENV: Fixade större klickyta på tabbar i minimerad högerspalt

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
@@ -151,6 +151,7 @@ wc-support-panel-manager {
       position: relative;
       font-weight: 500;
       text-decoration: none;
+      display: block;
 
       span{
         display: block;
