INTYG-7870: Flyttat valideringstext närmare sin komponent.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePercentField/uePercentField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePercentField/uePercentField.directive.html
@@ -18,4 +18,5 @@
       </div>
     </div>
   </ue-validation-wrapper>
+  <ue-validation-list field-type="{{config.type}}" validations="validation.messagesByField[config.modelProp.toLowerCase()]" ></ue-validation-list>
 </div>
