INTYG-7737: GUI bedömning fixad

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
@@ -2,7 +2,7 @@
 <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
   <div class="row form-horizontal">
     <ue-label class="col-sm-12" config="::config.label" model="::model"></ue-label>
-    <div class="col-md-2 col-sm-4" data-ng-repeat="choice in modelGetterSetter()">
+    <div ng-class="colStyle" data-ng-repeat="choice in modelGetterSetter()">
      <wc-checkbox-wrapper>
         <input ng-attr-id="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}"
                type="checkbox"
