--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss
@@ -27,6 +27,10 @@ ue-sjukskrivningar {
     }
   }
 
+  .arbetstid {
+    color: $wc-color-21;
+  }
+
   .sjukskrivningar_period label {
     margin-right: 9px;
   }
