INTYG-6965: Ny ikon för att dölja högerspalten

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.html
@@ -32,8 +32,7 @@
          uib-popover="{{::getText('common.supportpanel.minimize.tooltip')}}"
          popover-placement="left auto"
         >
-        <i class="material-icons">keyboard_arrow_right</i>
-        <i class="material-icons">keyboard_arrow_right</i><!-- @TODO: use a single icon instead of these two combined -->
+        <i class="icon-wc-ikon-49 icon-wc-24"></i>
       </a>
     </div>
     <div class="tab-content-container" ng-repeat="tab in config.tabs" ng-show="tab.active">
