INTYG-6560: Tagit bort required på motivering. Lagt till stöd för ikon på ue-labels. Lagt till stöd för variable label key på help chevron.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelp/wcHelp.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelp/wcHelp.directive.html
@@ -1,2 +1,2 @@
-<wc-help-chevron help-text-key="{{::helpKey}}"></wc-help-chevron>
+<wc-help-chevron help-text-key="{{::helpKey}}" variable-label-key={{::variableLabelKey}}></wc-help-chevron>
 <wc-help-chevron-text help-text-key="{{::helpKey}}"></wc-help-chevron-text>
