--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueLabel/ueLabel.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueLabel/ueLabel.scss
@@ -5,6 +5,10 @@ ue-label {
   .form-horizontal .control-label {
     text-align: left;
   }
+
+  .material-icons {
+    color: $wc-color-21;
+  }
 }
 
 .form-horizontal ue-label .control-label {
