--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss
@@ -27,7 +27,10 @@ ue-sjukskrivningar {
     }
   }
 
-  .arbetstid {
+  .ifyllnadsstod {
+    i {
+      margin-left: -4px;
+    }
     color: $wc-color-21;
   }
 
