INTYG-7931: Fixade trasig intyg/utkast-header i IE11

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
@@ -1,4 +1,4 @@
-<div ui-view="header"></div>
+<div ui-view="header" class="webcert-workarea-intyg-header"></div>
 <div class="webcert-workarea-wrapper">
   <div class="webcert-workarea-hflex-container centered-constrained-content" id="view-fk7263" ng-show="!viewState.common.activeErrorMessageKey">
     <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid">
