INTYG-7856: Kompletteringsblock style fix

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
@@ -33,9 +33,13 @@ wc-bottom-fadeout {
 
     &:after {
       content: '';
-      display: table;
-      clear: both;
+      display: block;
+      padding-bottom: $wc-text-fadeout-height;
     }
+  }
+
+  .wc-bottom-fadeout-background-02{
+    background-color: $wc-color-02;
   }
 }
 
