--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss
@@ -6,6 +6,8 @@ wc-inline-komplettering {
     .alert {
       display: block;
       margin-bottom: 0;
+      padding-bottom: 0;
+      padding-right: 20px;
     }
   }
 
