--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
@@ -5,6 +5,7 @@
     border: 1px solid $wc-color-15;
     border-radius: 4px;
     transition: border-color .36s ease-in-out, box-shadow .36s ease-in-out;
+    z-index: 0;
     &:focus {
       outline: none !important;
       border: 1px solid $wc-color-21;
@@ -30,8 +31,9 @@
       color: $wc-color-09;
     }
   }
-  .btn {
+  .input-group-btn:last-child>.btn {
     padding: 6px 5px;
+    z-index: 0;
   }
   .border {
     border-color: $wc-color-21 !important;
