--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
@@ -12,6 +12,7 @@ wc-support-panel-manager {
   $active-tab-background-color: $wc-color-15;
   $active-tab-border-color: $active-tab-background-color;
 
+  background-color: $wc-color-24;
   width: $wc-max-content-width * 0.4;
   height: 100%;
   position: relative;
