INTYG-6556: lagt till ikon och blå text för "Intyget motsvarar.."

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.scss
@@ -36,4 +36,11 @@ ue-sjukfranvaro {
   .row {
       padding-bottom: 10px;
   }
+
+  .ifyllnadsstod {
+    i {
+      margin-left: -4px;
+    }
+    color: $wc-color-21;
+  }
 }
