--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
@@ -70,8 +70,8 @@
     </div>
 
     <div ng-if="viewstate.totalDays" class="row fold-animation fold-slide-animation">
-      <div class="col-xs-12">
-        Intyget motsvarar en period på {{viewstate.totalDays}} dagar.
+      <div class="col-xs-12 ifyllnadsstod">
+        <i class="material-icons">lightbulb_outline</i>Intyget motsvarar en period på {{viewstate.totalDays}} dagar.
       </div>
     </div>
   </ue-validation-wrapper>
