--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.scss
@@ -8,6 +8,10 @@ ue-sjukfranvaro {
     border-color: $wc-color-11;
   }
 
+  ue-validation-list .validation-error {
+    margin-left: 15px;
+  }
+
   .full-time-label-span {
     line-height: 38px;
   }
@@ -20,7 +24,7 @@ ue-sjukfranvaro {
 
   input[type=text] {
       &.form-control.niva{
-        display: initial;
+        display: inline-block;
         width: 40px;
       }
   }
