DEVENV: Fix för trasiga protractor-test.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
@@ -17,6 +17,7 @@ wc-support-panel-manager {
   height: 100%;
   position: relative;
   margin-left: 8px;
+  z-index: 4;
 
   &.minimized{
     width: 110px;
