INTYG-7889: formattering av html

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
@@ -55,7 +55,8 @@
 
           </span>
 
-          <button type="button" ng-if="$index > 1" class="btn btn-type-8" ng-click="viewstate.deleteRow($index)" id="{{config.modelProp}}-{{$index}}-deleteRow">
+          <button type="button" ng-if="$index > 1" class="btn btn-type-8" ng-click="viewstate.deleteRow($index)"
+                  id="{{config.modelProp}}-{{$index}}-deleteRow">
             <i class="material-icons">remove_circle</i> Ta bort
           </button>
         </div>
@@ -87,7 +88,7 @@
         </div>
       </div>
     </div>
-  </ue-validation-wrapper>
 
+  </ue-validation-wrapper>
 
 </div>
