INTYG-7947: La till så att man kan skicka AF00251

--- a/af/af00251/src/main/resources/META-INF/resources/webjars/af00251/minaintyg/views/view-cert.html
+++ b/af/af00251/src/main/resources/META-INF/resources/webjars/af00251/minaintyg/views/view-cert.html
@@ -42,6 +42,7 @@
             <mi-certificate-replaced cert-meta-model="certMeta"></mi-certificate-replaced>
 
             <mi-certificate-action-buttons cert-model="cert" enable-archive="true"
+                                           on-send="send(cert)"
                                            enable-print="true"
                                            is-replaced="certMeta.isReplaced" enable-customize="false">
             </mi-certificate-action-buttons>
